# Hazina-Escrow

./: .env.example  .gitignore  .prettierignore  .tmp_lib_55bd3a1.rs  CONTRIBUTING.md  Cargo.toml  README.md  codecov.yml  docker-compose.prod.yml  docker-compose.yml  eslint.config.mjs  package-lock.json  package.json  prettier.config.mjs
.cargo-home/: .global-cache
.claude/: settings.local.json
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  documentation.yml  feature_request.yml  good_first_issue.yml  task.yml
.github/workflows/: deploy-frontend.yml  test-coverage.yml
backend/: .env.example  .eslintrc.json  Dockerfile  TODO.md  package-lock.json  package.json  vitest.config.ts  vitest.payment.config.ts
backend/src/: main.ts  seed.ts
contracts/hazina-escrow/: Cargo.toml  README.md
contracts/hazina-escrow/src/: lib.rs
contracts/hazina-escrow/test_snapshots/tests/: test_error_already_refunded.1.json  test_error_already_released.1.json  test_error_not_admin.1.json  test_error_not_buyer.1.json  test_lock_multi_and_release_multi.1.json  test_lock_multi_empty_shares.1.json  test_lock_multi_mismatched_lengths.1.json  test_transfer_admin.1.json  test_transfer_admin_unauthorized.1.json  test_update_fee.1.json
data/: datasets.json
docs/: i18n.md
frontend/: .dockerignore  .env.example  .eslintrc.json  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts  vitest.config.ts
frontend/.storybook/: preview.ts
frontend/coverage/: index.html  (+2 more)
(+316 files in other folders)
